# topcoat

./: Cargo.toml  README.md  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz.yml
benchmarks/scripts/: compare.sh
crates/topcoat/: Cargo.toml
crates/topcoat-asset/: Cargo.toml
crates/topcoat-cli/: Cargo.toml
crates/topcoat-core/: Cargo.toml
crates/topcoat-core/src/context/: app_state.rs  memoize.rs  mod.rs  state.rs
crates/topcoat-core/src/runtime/context/: abort.rs  mod.rs
crates/topcoat-macro/: Cargo.toml
crates/topcoat-router/: Cargo.toml
crates/topcoat-router/macro/src/: lib.rs
crates/topcoat-router/src/: body.rs  context.rs  dynamic_routes.rs  error.rs  fallback.rs  lib.rs  path.rs  pattern.rs  response.rs  route.rs  router.rs  segment.rs  state.rs  static_routes.rs
crates/topcoat-router/src/error/: bad_request.rs
crates/topcoat-router/src/file/: router.rs  segment.rs
crates/topcoat-router/src/manual/: layout.rs  page.rs  route.rs  router.rs
crates/topcoat-router/src/module/: segment.rs
crates/topcoat-router/src/runtime/: layer.rs  path.rs  router.rs
crates/topcoat-router/src/serde/: form.rs  json.rs
crates/topcoat-runtime/: Cargo.toml
crates/topcoat-session/: CHANGELOG.md
crates/topcoat-view/: Cargo.toml
docs/: IDEAS.md  cx.md  functions_not_middlewares.md  memoization.md  module_router.md  path_and_query_params.md  request_response.md  router.md  tailwind.md
examples/assets/: Cargo.toml
examples/hello-world/: Cargo.toml
examples/manual-router/: Cargo.toml
examples/tailwind/: Cargo.toml
(+166 files in other folders)
