[package]
name = "topcoat-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo.workspace = true
hashbrown.workspace = true
http.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
