[package]
name = "topcoat-router"
version = "0.1.0"
edition = "2024"

[features]
discover = ["dep:inventory"]

[dependencies]
topcoat-view.workspace = true

axum.workspace = true
http.workspace = true
inventory = { workspace = true, optional = true }
ref-cast.workspace = true
thiserror.workspace = true

[lints]
workspace = true
